<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProdutoDetalheActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:src="@drawable/camiseta1"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:id="@+id/img_produto_detalhe"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_produto_especifico"
            android:id="@+id/txt_titulo_produto_detalhe"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preco"
            android:id="@+id/txt_preco_produto_detalhe"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"/>
        
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/comprar"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp"
            android:layout_margin="8dp"
            android:layout_marginRight="8dp"
            android:id="@+id/produto_detalhe_btn_comprar"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descricao"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="aaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaa"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:id="@+id/produto_detalhe_txt_descricao"/>
    </LinearLayout>

</ScrollView>